--- a/figures/forall-1.tex
+++ b/figures/forall-1.tex
@@ -23,8 +23,8 @@ $\rightarrow$ & $^{N^{a}}HS$ $(\mathtt{if0}$ $(SH^{N^{a}}$ $\overline{0})$ $\ove
 
 \vspace{5pt}
 
-$\rightarrow{^{N^{a}}H}S$ $(SH^{N^{a}}$ $\overline{0})$
+$\rightarrow$ & ${^{N^{a}}H}S$ $(SH^{N^{a}}$ $\overline{0})$
 \end{tabular}
-\caption{Scheme functions with expected forall types cannot examine arguments}
-\label{parametricity-example-1}
+\caption{Scheme unable to break parametricity}
+\label{forall-1}
 \end{figure}
