--- a/figures/forall-2.tex
+++ b/figures/forall-2.tex
@@ -46,5 +46,5 @@ $\rightarrow$ & $\mathtt{wrong}$ ``Parametricity violated" \\
 $\rightarrow$ & \textbf{Error}: ``Parametricity violated"
 \end{tabular}
 \caption{Scheme breaking parametricity}
-\label{parametricity-example-2}
+\label{forall-2}
 \end{figure}
