Added label removal suffixes for type annotations of nils in SH and SM nil reductions.

--- a/model/sios.tex
+++ b/model/sios.tex
@@ -82,12 +82,12 @@ $\mathscr{E}[SM^{[T]}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}
 \vspace{5pt}
 
 % sh - list - nil
-$\mathscr{E}[SH^{[T]}$ $\mathtt{nil}^{T}]_{S}\rightarrow\mathscr{E}[\mathtt{nil}]$ \\
+$\mathscr{E}[SH^{[T]}$ $\mathtt{nil}^{T[T_{i}/T_{i}^{a}]}]_{S}\rightarrow\mathscr{E}[\mathtt{nil}]$ \\
 
 \vspace{5pt}
 
 % sm - list - nil
-$\mathscr{E}[SM^{[T]}$ $\mathtt{nil}^{T}]_{S}\rightarrow\mathscr{E}[\mathtt{nil}]$ \\
+$\mathscr{E}[SM^{[T]}$ $\mathtt{nil}^{T[T_{i}/T_{i}^{a}]}]_{S}\rightarrow\mathscr{E}[\mathtt{nil}]$ \\
 
 \vspace{5pt}
 
