Rewrote ch 2, sec interop, subsec forall, H/MS case.

--- a/figures/forall-1.tex
+++ b/figures/forall-1.tex
@@ -1,4 +1,4 @@
-\begin{figure}
+\begin{figure}[tb]
 \centering
 \begin{tabular}{ll}
 \vspace{5pt}
@@ -7,15 +7,15 @@
 
 \vspace{5pt}
 
-$\rightarrow$ & $(^{N^{a}\rightarrow N^{a}}HS$ $\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $\overline{1}$ $x_{1})$ $\overline{0}$ \\
+$\rightarrow$ & $(^{N^{a}\rightarrow N^{a}}HS$ $\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $\overline{1}$ $x_{1}))$ $\overline{0}$ \\
 
 \vspace{5pt}
 
-$\rightarrow$ & $(\lambda x_{2}.(^{N^{a}}HS$ $((\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $\overline{1}$ $x_{1})$ $(SH^{N^{a}}$ $x_{2}))))$ $\overline{0}$ \\
+$\rightarrow$ & $(\lambda x_{2}:N.(^{N^{a}}HS$ $((\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $\overline{1}$ $x_{1}))$ $(SH^{N^{a}}$ $x_{2}))))$ $\overline{0}$ \\
 
 \vspace{5pt}
 
-$\rightarrow$ & $^{N^{a}}HS$ $((\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $\overline{1}$ $x_{1})$ $(SH^{N^{a}}$ $\overline{0}))$ \\
+$\rightarrow$ & $^{N^{a}}HS$ $((\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $\overline{1}$ $x_{1}))$ $(SH^{N^{a}}$ $\overline{0}))$ \\
 
 \vspace{5pt}
 
@@ -23,8 +23,12 @@ $\rightarrow$ & $^{N^{a}}HS$ $(\mathtt{if0}$ $(SH^{N^{a}}$ $\overline{0})$ $\ove
 
 \vspace{5pt}
 
-$\rightarrow$ & ${^{N^{a}}H}S$ $(SH^{N^{a}}$ $\overline{0})$
+$\rightarrow$ & ${^{N^{a}}H}S$ $(SH^{N^{a}}$ $\overline{0})$ \\
+
+\vspace{5pt}
+
+$\rightarrow$ & $\overline{0}$
 \end{tabular}
-\caption{Scheme unable to break parametricity}
+\caption{Scheme is unable to break parametricity}
 \label{forall-1}
 \end{figure}
