--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -98,17 +98,15 @@ The case for higher-order functions is more complex, but straightforward.  Obser
 
 \subsection{Forall Types}
 
-If the expected and actual types of a boundary are a forall type ($^{\forall X.T}HM^{\forall X.T}$ $v_{M}$ for example), the value is either a type abstraction ($\Lambda X.e_{M}$ for example) or a Scheme value wrapped in an inner boundary ($^{\forall X.T}MS$ $v_{S}$ for example).  If it is a type abstraction, the boundary moves inside the type abstraction and wraps the expression.  For example, $^{\forall X.T}HM^{\forall X.T}$ $\Lambda X.e_{M}$ reduces to $\Lambda X.(^{T}HM^{T}$ $e_{M})$.  If it is a Scheme value wrapped in an inner boundary, the outer boundary reduces to a new boundary bridging the outer language and Scheme that contains the Scheme value.  For example, $^{\forall X.T}HM^{\forall X.T}$ $(^{\forall X.T}MS$ $v_{S})$ reduces to $^{\forall X.T}HS$ $v_{S}$.
+If a boundary has expected and actual forall types ($^{\forall X.T}HM^{\forall X.T}$ $v_{M}$ for example), the value is either a type abstraction ($\Lambda X.e_{M}$ for example) or a Scheme value wrapped in an inner boundary ($^{\forall X.T}MS$ $v_{S}$ for example).  If it is a type abstraction, the boundary moves inside the type abstraction and wraps the expression.  For example, $^{\forall X.T}HM^{\forall X.T}$ $\Lambda X.e_{M}$ reduces to $\Lambda X.(^{T}HM^{T}$ $e_{M})$.  If it is a Scheme value wrapped in an inner boundary, the outer boundary reduces to a new boundary bridging the outer language and Scheme that contains the Scheme value.  For example, $^{\forall X.T}HM^{\forall X.T}$ $(^{\forall X.T}MS$ $v_{S})$ reduces to $^{\forall X.T}HS$ $v_{S}$.
 
-If the expected and actual types of a boundary are a forall type and the Scheme type, respectively, the value is a Scheme value.  Such a boundary is irreducible because Scheme does not have type abstractions.  Therefore $^{\forall X.T_{1}}HS$ $v_{S}$ and $^{\forall X.T_{1}}MS$ $v_{S}$ are values.  Nevertheless, there are useful Scheme values that correspond to forall types, and they ought to be convertable.  If the expected type of the boundary is instantiated and it is not a forall type, the boundary is reducible and the Scheme value can be converted.  However, Haskell and ML preserve parametricity, and instantiating the expected type of the boundary does nothing to prevent the Scheme value, if it is a function, from breaking parametricity once converted.
+If a boundary has an expected forall type and an actual Scheme type ($^{\forall X.T}HS$ $v_{S}$ for example), the value is a Scheme value.  Such a boundary is irreducible because Scheme does not have type abstractions.  Therefore $^{\forall X.T}HS$ $v_{S}$ and $^{\forall X.T}MS$ $v_{S}$ are values.  Nevertheless, there are useful Scheme values that correspond to forall types, and they ought to be convertible.  If the expected forall type is instantiated and the result is not a forall type, the boundary is reducible and the Scheme value is convertible.  However, Haskell and ML preserve parametricity, and instantiating the expected forall type does nothing to prevent the Scheme value, if it is a function, from breaking parametricity once converted.
 
-Scheme functions with expected forall types can break parametricity by using type predicates and conditions to determine their behavior by the types and values of their arguments.  Haskell and ML must wrap their arguments for these functions such that Scheme predicates and conditions cannot examine them.  This is done by labeling instantiations of expected forall types with unique labels, denoted $T^{a}$, and making boundaries with labeled actual types---$SH^{T^{a}}$ $e_{H}$ for example---irreducible; Scheme type predicates and conditions cannot examine them.  Therefore $SH^{T^{a}}$ $e_{H}$ and $SM^{T^{a}}$ $v_{M}$ are values.  Expected types of boundaries can be instantiated by applying those boundaries to types.  The reductions of these type applications label the type arguments before instantiating the expected types with them.  See Figure \ref{forall-1} for an example.
+Scheme functions with expected forall types can break parametricity by using type predicates and conditions to determine their behavior by the types and values of their arguments.  Haskell and ML must wrap their arguments for these functions such that Scheme predicates and conditions cannot examine them.  Expected forall types of boundaries can be instantiated by applying those boundaries to types.  These type applications label their type arguments with unique labels, denoted $T^{a}$, before instantiating the expected forall types with them.  Boundaries with actual labeled types ($SH^{T^{a}}$ $e_{H}$ for example) are irreducible; Scheme type predicates and conditions cannot examine them.  Therefore $SH^{T^{a}}$ $e_{H}$ and $SM^{T^{a}}$ $v_{M}$ are values.  Scheme can return these wrapped arguments to Haskell and ML if the expected and actual types match.  For example, $^{N^{a}}HS$ $(SH^{N^{a}}$ $\overline{0})$ reduces to $\overline{0}$.  If they do not match, the outer boundary reduces to a parametricity error report.  See Figure \ref{forall-1} for an example.
 
 \input{figures/forall-1.tex}
 
-Natural number conditions reduce to their true alternatives only if their guards are $\overline{0}$.  $\mathtt{if0}$ $(SH^{N^{a}}$ $\overline{0})$ $\overline{1}$ $(SH^{N^{a}}$ $\overline{0})$ reduces to $(SH^{N^{a}}$ $\overline{0})$ because the guard is $(SH^{N^{a}}$ $\overline{0})$, which is not equal to $\overline{0}$.  If Scheme functions with labeled expected types produce their arguments as their results, the arguments can cross back to Haskell and ML if the expected and actual types are equal.  Therefore $^{N^{a}}HS$ $(SH^{N^{a}}$ $\overline{0})$ reduces to $\overline{0}$.  If the expected type of the outer boundary and the actual type of the inner boundary are not equal, the outer boundary reduces to a parametricity error report.
-
-Observe that $(^{\forall X.(X\rightarrow X)}HS$ $\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $\overline{1}$ $x_{1})$ $\lbrace N\rbrace)$, which has type $\forall X.(X\rightarrow X)$, reduces to $^{N^{a}\rightarrow N^{a}}HS$ $\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $\overline{1}$ $x_{1})$, which has type $N^{a}\rightarrow N^{a}$.  $N^{a}\rightarrow N^{a}$ conflicts with $N\rightarrow N$, the type expected by other Haskell expressions.  The Haskell and ML typing relations resolve this conflict by removing all labels from expected and actual types.  For example, $\Gamma\vdash_{H}{^{T}H}S$ $e_{S}:T[T_{i}/T^{a}_{i}]$, where $T[T_{i}/T_{i}^{a}]$ denotes the substitution of every labeled type $T_{i}^{a}$ for the underlying type $T_{i}$ within $T$.
+The Haskell and ML typing relations expect type applications to substitute types unchanged, and therefore expect $\forall X.(X\rightarrow X)$, instantiated with $N$, to be $N\rightarrow N$.  Observe that $(^{\forall X.(X\rightarrow X)}HS$ $\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $\overline{1}$ $x_{1}))$ $\lbrace N\rbrace$, which has type $\forall X.(X\rightarrow X)$, reduces to $^{N^{a}\rightarrow N^{a}}HS$ $\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $\overline{1}$ $x_{1})$, which appears to have type $N^{a}\rightarrow N^{a}$.  The Haskell and ML typing relations resolve this conflict by removing all labels from expected and actual types before making typing judgements.  Therefore $^{N^{a}\rightarrow N^{a}}HS$ $\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $\overline{1}$ $x_{1})$ has type $N\rightarrow N$, as expected.  Rewrite rules remove labels where required to resolve type conflicts.  $T[T_{i}/T_{i}^{a}]$ denotes the substitution of every labeled type $T_{i}^{a}$ for the underlying type $T_{i}$ within $T$.  
 
 Scheme functions with expected forall types can also break parametricity by producing the wrong argument as their results.  Haskell and ML assume type variables for result types are instantiated along with one or more type variables for argument types.  For example, Haskell and ML assume a function with type $\forall X_{1}.(\forall X_{2}.(X_{1}\rightarrow(X_{2}\rightarrow X_{2}))$ reduces to its second argument because the second argument and the result share the same type variable.  Labels enforce this assumption because unique labels are used for each application of a boundary to a type.  Unique labels group argument and result types together, and mismatched labels for expected and actual types of boundaries indicates that Scheme broke parametricity.  See Figure \ref{forall-2} for an example.
 
