Rearranged ch 2, sec interop, subsections to be nat, list, fun, forall.

--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -84,6 +84,14 @@ The expected and actual types of boundaries determine their reduction.
 
 Natural numbers do not change when they cross languages because the languages have the same number domain.  For example, $^{N}HM^{N}$ $\overline{n}$ reduces to $\overline{n}$.  For $^{N}HS$ $v_{S}$ and $^{N}MS$ $v_{S}$, where $v_{S}$ is not a natural number, the boundaries reduce to type error reports.
 
+\subsection{List Types}
+
+If a boundary has expected and actual list types ($^{[T]}HM^{[T]}$ $v_{M}$ for example), the value is either an empty list ($\mathtt{nil}^{T}$ for example) or a list construction ($\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2}$ for example).  If it is an empty list, the boundary reduces to the empty list.  For example, $^{[T]}HM^{[T]}$ $\mathtt{nil}^{T}$ reduces to $\mathtt{nil}^{T}$.  If it is an ML list construction crossing to Haskell, the boundary reduces to a list construction of the head and tail of the ML list construction wrapped in boundaries.  For example, $^{[T]}HM^{[T]}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})$ reduces to $\mathtt{cons}$ $(^{T}HM^{T}$ $v_{M}^{1})$ $(^{[T]}HM^{[T]}$ $v_{M}^{2})$.  If it is a Haskell list construction crossing to ML, the boundary is irreducible.  Since Haskell list constructions can be recursive and therefore infinite, they canot be mechanically converted to equivalent ML list constructions.  Therefore $^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})$ is a value.  Instead, heads and tails cross to ML individually when accessed by head and tail operations.  For example, $\mathtt{tl}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))$ reduces to $^{T}MH^{T}$ $e_{H}^{1}$.
+
+If the expected and actual types of a boundary are a list type and the Scheme type, respectively, the value is either an empty list or a list construction.  If it is an empty list, the boundary reduces to an empty list of the corresponding type.  For example, $^{[T]}HS$ $\mathtt{nil}$ reduces to $\mathtt{nil}^{T}$.  If it is a list construction, the boundary expression reduces to a list construction of the head and tail wrapped in boundaries.  For example, $^{[T]}HS$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})$ reduces to $\mathtt{cons}$ $(^{T}HS$ $v_{S}^{1})$ $(^{[T]}HS$ $v_{S}^{2})$.
+
+If the expected and actual types of a boundary are the Scheme type and a list type, respectively, the value is either an empty list or a list construction.  If it is an empty list, the boundary reduces to an empty list.  For example, $SH^{[T]}$ $\mathtt{nil}^{T}$ reduces to $\mathtt{nil}$.  If it is an ML list construction, the boundary reduces to a list construction of the head and tail wrapped in boundaries.  For example, $SM^{[T]}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})$ reduces to $\mathtt{cons}$ $(SM^{T}$ $v_{M}^{1})$ $(SM^{[T]}$ $v_{M}^{2})$.  If it is a Haskell list construction, it is irreducible for the same reason that $^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})$ is a value, as discussed above.  Therefore $SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})$ is a value.
+
 \subsection{Function Types}
 
 Functions cannot be directly converted when they cross languages because the language grammars are different, Haskell and ML do not have a reasonable equivalent for every Scheme function, and functions may behave differently with different evaluation strategies.  Instead, server functions are wrapped in client functions.  The client functions apply the server function to their arguments and produce the server function results as their own.  This is made possible by languages performing substitution within themselves across boundaries.  Observe the Scheme function $\lambda x_{1}.\mathtt{nil}$ cross to Haskell with expected type $N\rightarrow[N]$ and be applied to $\overline{0}$:
@@ -112,19 +120,15 @@ Scheme functions with expected forall types can also break parametricity by prod
 
 \input{figures/forall-2.tex}
 
-If the expected and actual types of a boundary expression are the Scheme type and a universal type, respectively, the contained value is either a type abstraction or a Scheme value contained within another boundary expression.
+If a boundary has an expected Scheme type and an actual forall type ($SH^{\forall X.T}$ $e_{H}$ for example), the value is either a type abstraction ($\Lambda X.e_{H}$ for example) or a Scheme value wrapped in an inner boundary ($^{\forall X.T}HS$ $v_{S}$ for example).
 
-If it is a type abstraction, $\Lambda X.e_{H}$ with type $\forall X.T$ for example, it may contain parametrically polymorphic functions of types containing $X$.  Since those functions are parametrically polymorphic, they cannot examine the types or values of their arguments.  Therefore Scheme arguments for these functions cannot cross the boundary to Haskell and ML.  In addition, the function types must be instantiated with a type that would enable them to accept any Scheme argument.  The lump type $L$ is added to be used in these situations.  $^{L}HS$ $v_{S}$ and $^{L}MS$ $v_{S}$ are irreducible.  For example, $SH^{\forall X.(T\rightarrow T)}$ $\Lambda X.(\lambda x:X.x)\rightarrow SH^{(T\rightarrow T)[L/X]}$ $(\Lambda X.(\lambda x:X.x))$ $\lbrace L\rbrace\rightarrow SH^{L\rightarrow L}$ $(\lambda x:L.x)$.
+If it is a type abstraction, it must be applied to a type before crossing to Scheme.  Scheme does not have type applications and would be unable to utilize the type abstraction, except for returning it to Haskell or ML.  The type variable bound by the type abstraction could only occur in empty lists, error reports, and functions.  Applying the type abstraction to a type would not affect the conversion of empty lists because their reductions discard their type annotations (see Section \ref{list-types}).
+
+the lump type, denoted $L$, before it crosses to Scheme would 
+
+Since those functions cannot examine the types or values of their arguments, Scheme arguments for these functions cannot cross the boundary to Haskell and ML.  In addition, the function types must be instantiated with a type that would enable them to accept any Scheme argument.  The lump type $L$ is added to be used in these situations.  $^{L}HS$ $v_{S}$ and $^{L}MS$ $v_{S}$ are irreducible.  For example, $SH^{\forall X.(T\rightarrow T)}$ $\Lambda X.(\lambda x:X.x)\rightarrow SH^{(T\rightarrow T)[L/X]}$ $(\Lambda X.(\lambda x:X.x))$ $\lbrace L\rbrace\rightarrow SH^{L\rightarrow L}$ $(\lambda x:L.x)$.
 
 If it is a Scheme value contained within another boundary expression, the boundary expression reduces to the Scheme value.  For example, $SH^{T}$ $(^{T}HS$ $v_{S})\rightarrow$ $v_{S}$.
-
-\subsection{List Types}
-
-If the expected and actual types of a boundary are a list type, the value is either an empty list or a list construction.  If it is an empty list, the boundary reduces to the empty list.  For example, $^{[T]}HM^{[T]}$ $\mathtt{nil}^{T}$ reduces to $\mathtt{nil}^{T}$.  If it is an ML list construction crossing to Haskell, the boundary reduces to a list construction of the head and tail of the ML list construction wrapped in boundaries.  For example, $^{[T]}HM^{[T]}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})$ reduces to $\mathtt{cons}$ $(^{T}HM^{T}$ $v_{M}^{1})$ $(^{[T]}HM^{[T]}$ $v_{M}^{2})$.  If it is a Haskell list construction crossing to ML, the boundary is irreducible.  Since Haskell list constructions can be recursive and therefore infinite, they canot be mechanically converted to equivalent ML list constructions.  Therefore $^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})$ is a value.  Instead, heads and tails cross to ML individually when accessed by head and tail operations.  For example, $\mathtt{tl}$ $(^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2}))$ reduces to $^{T}MH^{T}$ $e_{H}^{1}$.
-
-If the expected and actual types of a boundary are a list type and the Scheme type, respectively, the value is either an empty list or a list construction.  If it is an empty list, the boundary reduces to an empty list of the corresponding type.  For example, $^{[T]}HS$ $\mathtt{nil}$ reduces to $\mathtt{nil}^{T}$.  If it is a list construction, the boundary expression reduces to a list construction of the head and tail wrapped in boundaries.  For example, $^{[T]}HS$ $(\mathtt{cons}$ $v_{S}^{1}$ $v_{S}^{2})$ reduces to $\mathtt{cons}$ $(^{T}HS$ $v_{S}^{1})$ $(^{[T]}HS$ $v_{S}^{2})$.
-
-If the expected and actual types of a boundary are the Scheme type and a list type, respectively, the value is either an empty list or a list construction.  If it is an empty list, the boundary reduces to an empty list.  For example, $SH^{[T]}$ $\mathtt{nil}^{T}$ reduces to $\mathtt{nil}$.  If it is an ML list construction, the boundary reduces to a list construction of the head and tail wrapped in boundaries.  For example, $SM^{[T]}$ $(\mathtt{cons}$ $v_{M}^{1}$ $v_{M}^{2})$ reduces to $\mathtt{cons}$ $(SM^{T}$ $v_{M}^{1})$ $(SM^{[T]}$ $v_{M}^{2})$.  If it is a Haskell list construction, it is irreducible for the same reason that $^{[T]}MH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})$ is a value, as discussed above.  Therefore $SH^{[T]}$ $(\mathtt{cons}$ $e_{H}^{1}$ $e_{H}^{2})$ is a value.
 
 \input{model/hie.tex}
 \input{model/mie.tex}
