--- a/chapter-2.tex
+++ b/chapter-2.tex
@@ -94,13 +94,13 @@ If the expected and actual types of a boundary are the Scheme type and a list ty
 
 \subsection{Function Types}
 
-Functions cannot be directly converted when they cross languages because the language grammars are different, Haskell and ML do not have a reasonable equivalent for every Scheme function, and functions may behave differently with different evaluation strategies.  Instead, server functions are wrapped in client functions.  The client functions apply the server function to their arguments and produce the server function results as their own.  This is made possible by languages performing substitution within themselves across boundaries.  Observe the Scheme function $\lambda x_{1}.\mathtt{nil}$ cross to Haskell with expected type $N\rightarrow[N]$ and be applied to $\overline{0}$:
+Functions cannot be directly converted when they cross languages because the language grammars are different, Haskell and ML do not have a reasonable equivalent for every Scheme function, and functions may behave differently with different evaluation strategies.  Instead, server functions are wrapped in client functions.  The client functions apply the server function to their arguments and produce the server function results as their own.  This is made possible by languages performing substitution within themselves across boundaries.
 
 \input{figures/function-1.tex}
 
-In the above example, a single boundary with a function type is split into two boundaries that convert the Haskell argument to an equivalent Scheme argument and the Scheme result to an equivalent Haskell result.  Every boundary with a function type is split into two boundaries in this fashion.  The Scheme-to-Haskell boundary verifies the syntactic form of its value matches its expected type.  If its value is not some list of natural numbers, it reports a type error.  If the body of the Scheme function had been $\overline{0}$ instead of $\mathtt{nil}$, the computation would reduce to $^{[N]}HS$ $\overline{0}$ instead of $^{[N]}HS$ $\mathtt{nil}$.  Since $\overline{0}$ does not have the equivalent type $[N]$, $^{[N]}HS$ $\overline{0}$ reduces to $\mathtt{wrong}$ ``Not a list" to report the type error.
+In Figure \ref{function-1}, a single boundary with a function type is split into two boundaries that convert the Haskell argument to an equivalent Scheme argument and the Scheme result to an equivalent Haskell result.  Every boundary with a function type is split into two boundaries in this fashion.  The Scheme-to-Haskell boundary verifies the syntactic form of its value matches its expected type.  If its value is not some list of natural numbers, it reports a type error.  If the body of the Scheme function had been $\overline{0}$ instead of $\mathtt{nil}$, the computation would reduce to $^{[N]}HS$ $\overline{0}$ instead of $^{[N]}HS$ $\mathtt{nil}$.  Since $\overline{0}$ does not have the equivalent type $[N]$, $^{[N]}HS$ $\overline{0}$ reduces to $\mathtt{wrong}$ ``Not a list" to report the type error.
 
-The case for higher-order functions is more complex, but straightforward.  Observe the Scheme function $\lambda x_{1}.(x_{1}$ $\overline{0})$ cross to Haskell with expected type $(N\rightarrow N)\rightarrow N$ and be applied to $\lambda x_{2}:N.x_{2}$:
+The case for higher-order functions is more complex, but straightforward.  See Figure \ref{function-2} for an example.
 
 \input{figures/function-2.tex}
 
@@ -110,25 +110,21 @@ If a boundary has expected and actual forall types ($^{\forall X.T}HM^{\forall X
 
 If a boundary has an expected forall type and an actual Scheme type ($^{\forall X.T}HS$ $v_{S}$ for example), the value is a Scheme value.  Such a boundary is irreducible because Scheme does not have type abstractions.  Therefore $^{\forall X.T}HS$ $v_{S}$ and $^{\forall X.T}MS$ $v_{S}$ are values.  Nevertheless, there are useful Scheme values that correspond to forall types, and they ought to be convertible.  If the expected forall type is instantiated and the result is not a forall type, the boundary is reducible and the Scheme value is convertible.  However, Haskell and ML preserve parametricity, and instantiating the expected forall type does nothing to prevent the Scheme value, if it is a function, from breaking parametricity once converted.
 
-Scheme functions with expected forall types can break parametricity by using type predicates and conditions to determine their behavior by the types and values of their arguments.  Haskell and ML must wrap their arguments for these functions such that Scheme predicates and conditions cannot examine them.  Expected forall types of boundaries can be instantiated by applying those boundaries to types.  These type applications label their type arguments with unique labels, denoted $T^{a}$, before instantiating the expected forall types with them.  Boundaries with actual labeled types ($SH^{T^{a}}$ $e_{H}$ for example) are irreducible; Scheme type predicates and conditions cannot examine them.  Therefore $SH^{T^{a}}$ $e_{H}$ and $SM^{T^{a}}$ $v_{M}$ are values.  Scheme can return these wrapped arguments to Haskell and ML if the expected and actual types match.  For example, $^{N^{a}}HS$ $(SH^{N^{a}}$ $\overline{0})$ reduces to $\overline{0}$.  If they do not match, the outer boundary reduces to a parametricity error report.  See Figure \ref{forall-1} for an example.
+Scheme functions with expected forall types can break parametricity by using type predicates and conditions to determine their behavior by the types and values of their arguments.  Haskell and ML must wrap their arguments for these functions such that Scheme predicates and conditions cannot examine them.  Expected forall types of boundaries can be instantiated by applying those boundaries to types.  These type applications label their type arguments with unique labels, denoted $T^{a}$, before instantiating the expected forall types with them.  Boundaries with actual labeled types ($SH^{T^{a}}$ $e_{H}$ for example) are irreducible; Scheme type predicates and conditions cannot examine them.  Therefore $SH^{T^{a}}$ $e_{H}$ and $SM^{T^{a}}$ $v_{M}$ are values.  Scheme can return these wrapped arguments to Haskell and ML if the expected and actual types match.  For example, $^{T^{a}}HS$ $(SH^{T^{a}}$ $e_{H})$ reduces to $e_{H}$.  If they do not match, the outer boundary reduces to a parametricity error report.  See Figure \ref{forall-1} for an example.
 
 \input{figures/forall-1.tex}
 
 The Haskell and ML typing relations expect type applications to substitute types unchanged, and therefore expect $\forall X.(X\rightarrow X)$, instantiated with $N$, to be $N\rightarrow N$.  Observe that $(^{\forall X.(X\rightarrow X)}HS$ $\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $\overline{1}$ $x_{1}))$ $\lbrace N\rbrace$, which has type $\forall X.(X\rightarrow X)$, reduces to $^{N^{a}\rightarrow N^{a}}HS$ $\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $\overline{1}$ $x_{1})$, which appears to have type $N^{a}\rightarrow N^{a}$.  The Haskell and ML typing relations resolve this conflict by removing all labels from expected and actual types before making typing judgements.  Therefore $^{N^{a}\rightarrow N^{a}}HS$ $\lambda x_{1}.(\mathtt{if0}$ $x_{1}$ $\overline{1}$ $x_{1})$ has type $N\rightarrow N$, as expected.  Rewrite rules remove labels where required to resolve type conflicts.  $T[T_{i}/T_{i}^{a}]$ denotes the substitution of every labeled type $T_{i}^{a}$ for the underlying type $T_{i}$ within $T$.  
 
-Scheme functions with expected forall types can also break parametricity by producing the wrong argument as their results.  Haskell and ML assume type variables for result types are instantiated along with one or more type variables for argument types.  For example, Haskell and ML assume a function with type $\forall X_{1}.(\forall X_{2}.(X_{1}\rightarrow(X_{2}\rightarrow X_{2}))$ reduces to its second argument because the second argument and the result share the same type variable.  Labels enforce this assumption because unique labels are used for each application of a boundary to a type.  Unique labels group argument and result types together, and mismatched labels for expected and actual types of boundaries indicates that Scheme broke parametricity.  See Figure \ref{forall-2} for an example.
+Scheme functions with expected forall types can also break parametricity by producing the wrong argument as their results.  Haskell and ML assume type variables for result types are instantiated along with one or more type variables for argument types.  For example, Haskell and ML assume a function with type $\forall X_{1}.(\forall X_{2}.(X_{1}\rightarrow(X_{2}\rightarrow X_{2}))$ reduces to its second argument because the second argument and the result share the same type variable.  Labels enable Haskell and ML to detect and report violations of parametricity during run time.  Since unique labels are used for each application of a boundary to a type, they group argument and result types together.  Mismatched labels for expected and actual types of boundaries indicates that Scheme broke parametricity.  See Figure \ref{forall-2} for an example.
 
 \input{figures/forall-2.tex}
 
-If a boundary has an expected Scheme type and an actual forall type ($SH^{\forall X.T}$ $e_{H}$ for example), the value is either a type abstraction ($\Lambda X.e_{H}$ for example) or a Scheme value wrapped in an inner boundary ($^{\forall X.T}HS$ $v_{S}$ for example).
+If a boundary has an expected Scheme type and an actual forall type ($SH^{\forall X.T}$ $e_{H}$ for example), the value is either a type abstraction ($\Lambda X.e_{H}$ for example) or a Scheme value wrapped in an inner boundary ($^{\forall X.T}HS$ $v_{S}$ for example).  If the value is a type abstraction, the boundary is irreducible because Scheme does not have type abstractions.  Instead, the expected type is insantiated with, and the type abstraction is applied to, the lump type, denoted $L$.  If the result is not another type abstraction, the boundary is reducible.  Boundaries with expected lump types are irreducible; $^{L}HS$ $v_{S}$ and $^{L}MS$ $v_{S}$ are values.  Empty lists instantiated with the lump type convert as with other types because their conversions discard their type annotations.  Likewise, error reports instantiated with the lump type terminate the computation as with other types.  Polymorphic functions instantiated with the lump type satisfy the expectations of all languages because they convert to Scheme functions that can be applied to arguments of various types, but do not break parametricity.  These polymorphic functions can return their arguments to Scheme if the expected and actual types are lump types.  For example, $SH^{L}$ $(^{L}HS$ $\overline{0})$ reduces to $v_{S}$.  See Figure \ref{forall-3} for an example.
 
-If it is a type abstraction, it must be applied to a type before crossing to Scheme.  Scheme does not have type applications and would be unable to utilize the type abstraction, except for returning it to Haskell or ML.  The type variable bound by the type abstraction could only occur in empty lists, error reports, and functions.  Applying the type abstraction to a type would not affect the conversion of empty lists because their reductions discard their type annotations (see Section \ref{list-types}).
+If it is a Scheme value wrapped in an inner boundary, the boundary reduces to the Scheme value.  For example, $SH^{\forall X.T}$ $(^{\forall X.T}HS$ $v_{S})$ reduces to $v_{S}$.
 
-the lump type, denoted $L$, before it crosses to Scheme would 
-
-Since those functions cannot examine the types or values of their arguments, Scheme arguments for these functions cannot cross the boundary to Haskell and ML.  In addition, the function types must be instantiated with a type that would enable them to accept any Scheme argument.  The lump type $L$ is added to be used in these situations.  $^{L}HS$ $v_{S}$ and $^{L}MS$ $v_{S}$ are irreducible.  For example, $SH^{\forall X.(T\rightarrow T)}$ $\Lambda X.(\lambda x:X.x)\rightarrow SH^{(T\rightarrow T)[L/X]}$ $(\Lambda X.(\lambda x:X.x))$ $\lbrace L\rbrace\rightarrow SH^{L\rightarrow L}$ $(\lambda x:L.x)$.
-
-If it is a Scheme value contained within another boundary expression, the boundary expression reduces to the Scheme value.  For example, $SH^{T}$ $(^{T}HS$ $v_{S})\rightarrow$ $v_{S}$.
+\input{figures/forall-3.tex}
 
 \input{model/hie.tex}
 \input{model/mie.tex}
