--- a/figures/forall-1.tex
+++ b/figures/forall-1.tex
@@ -29,6 +29,6 @@ $\rightarrow$ & ${^{N^{a}}H}S$ $(SH^{N^{a}}$ $\overline{0})$ \\
 
 $\rightarrow$ & $\overline{0}$
 \end{tabular}
-\caption{Scheme is unable to break parametricity}
+\caption{Labels protect parametricity}
 \label{forall-1}
 \end{figure}
