--- a/figures/forall-2.tex
+++ b/figures/forall-2.tex
@@ -45,6 +45,6 @@ $\rightarrow$ & $\mathtt{wrong}$ ``Parametricity violated" \\
 
 $\rightarrow$ & \textbf{Error}: ``Parametricity violated"
 \end{tabular}
-\caption{Scheme breaking parametricity}
+\caption{Labels detect parametricity violations}
 \label{forall-2}
 \end{figure}
