--- a/figures/function-1.tex
+++ b/figures/function-1.tex
@@ -1,4 +1,4 @@
-\begin{figure}[h]
+\begin{figure}[tb]
 \centering
 \begin{tabular}{ll}
 \vspace{5pt}
@@ -25,6 +25,6 @@ $\rightarrow$ & $^{[N]}HS$ $\mathtt{nil}$ \\
 
 $\rightarrow$ & $\mathtt{nil}^{N}$
 \end{tabular}
-\caption{function-1}
+\caption{Conversion of a function}
 \label{function-1}
 \end{figure}
