--- a/figures/function-2.tex
+++ b/figures/function-2.tex
@@ -1,4 +1,4 @@
-\begin{figure}[h]
+\begin{figure}[tb]
 \centering
 \begin{tabular}{ll}
 \vspace{5pt}
@@ -41,6 +41,6 @@ $\rightarrow$ & ${^{N}H}S$ $\overline{0}$ \\
 
 $\rightarrow$ & $\overline{0}$
 \end{tabular}
-\caption{function-2}
+\caption{Conversion of a higher-order function}
 \label{function-2}
 \end{figure}
